samples/_failures_safe/1761043476_9facca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71d07f7a.c: In function ‘main’:
./samples/SAFE/__tmp_71d07f7a.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_71d07f7a.c:140:9: error: expected declaration or statement at end of input
